unpackaged/main/default/objects/ET_Service_Request_Common_Data__c/ET_Service_Request_Common_Data__c.object-meta.xml
<CustomObject>
    <label>Service Request Common Data</label>
    <nameField>
        <displayFormat>SRCD-{0000}</displayFormat>
        <label>Service Request Common Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests Common Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>