unpackaged/main/default/objects/ET_Service_Request_Common_Data__c/fields/ET_Common_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Common_Data_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Common Data Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>