unpackaged/main/default/objects/ET_Service_Request_Common_Data__c/fields/ET_Contract_Period__c.field-meta.xml
<CustomField>
    <fullName>ET_Contract_Period__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>