unpackaged/main/default/objects/ET_Service_Request_Common_Data__c/fields/ET_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
                <isActive>false</isActive>
                <label>Multiple</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>