unpackaged/main/default/objects/ET_Service_Request_Common_Data__c/fields/ET_Fleet_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Fleet_Type__c</fullName>
    <label>Fleet Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ET Fleet</fullName>
            </value>
            <value>
                <fullName>Client Fleet</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
            <value>
                <fullName>Lease to own</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>