unpackaged/main/default/objects/ET_Service_Request_Common_Data__c/fields/ET_Pricing_Method__c.field-meta.xml
<CustomField>
    <fullName>ET_Pricing_Method__c</fullName>
    <label>Pricing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Unit</fullName>
            </value>
            <value>
                <fullName>Comprehensive Price per Quotation</fullName>
            </value>
            <value>
                <fullName>Comprehensive Price per Route</fullName>
                <isActive>false</isActive>
                <label>Comprehensive Price per Route</label>
            </value>
            <value>
                <fullName>Multiple</fullName>
                <isActive>false</isActive>
                <label>Multiple</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>