unpackaged/main/default/objects/ET_Service_Request_Common_Data__c/fields/ET_Request_for_Separate_Prices__c.field-meta.xml
<CustomField>
    <fullName>ET_Request_for_Separate_Prices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request for Separate Prices</label>
    <type>Checkbox</type>
</CustomField>