unpackaged/main/default/objects/ET_Service_Request_Common_Data__c/fields/ET_Request_for_Target_Price__c.field-meta.xml
<CustomField>
    <fullName>ET_Request_for_Target_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request for Target Price</label>
    <type>Checkbox</type>
</CustomField>