unpackaged/main/default/objects/ET_Service_Request_Common_Data__c/fields/Total_Student_Per_Passenger__c.field-meta.xml
<CustomField>
    <fullName>Total_Student_Per_Passenger__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Total Student Per Passenger</label>
    <length>220</length>
    <type>Text</type>
</CustomField>